max doc length configurable

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -5,6 +5,7 @@
 processlanguages = eng, deu
 defaultlanguage = eng
 paragraphsasdocuments = false
+maxdocumentlength = 1500000
 dictionaryfiles = fck.all, deu:fck.deu, eng:fck.eng
 datareader = hoover
 
