--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,7 +3,8 @@
 
 # Production mode settings
 # ~~~~~
-application.mode=PROD
+# application.mode=PROD
+application.mode=DEBUG
 # XForwardedSupport="127.0.0.1"
 # play.http.context="/noden/"
 
@@ -51,21 +52,24 @@ authorization.password="password"
 # By convention, the default datasource is named `default`
 #
 
+# base url for UI links to original sources (e.g. Hoover)
+source.base.url = "http://localhost"
+
 # Available ES collections (provide db.* configuration for each collection below)
 es.indices =  [newsleak,newsleak2,newsleak3,newsleak4,newsleak5]
 # ES connection
 es.clustername = "elasticsearch"
-es.address = "newsleak-elasticsearch"
-es.port = 9300
+es.address = "localhost"
+es.port = 39300
 
 # Determine the default dataset for the application
 es.index.default = "newsleak"
 
 # collection 1
 db.newsleak.driver=org.postgresql.Driver
-db.newsleak.url="jdbc:postgresql://newsleak-postgres:5432/newsleak"
-db.newsleak.username="newsreader"
-db.newsleak.password="newsreader"
+db.newsleak.url="jdbc:postgresql://localhost:35432/newsleakspiegel"
+db.newsleak.username="newsreaderspiegel"
+db.newsleak.password="newsreaderSOSOangry1998"
 es.newsleak.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subject,Timezone,sender.id,Recipients.id,Recipients.order]
 
 # collection 2
