--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,9 +67,9 @@ es.index.default = "newsleak"
 
 # collection 1
 db.newsleak.driver=org.postgresql.Driver
-db.newsleak.url="jdbc:postgresql://localhost:35432/newsleakspiegel"
-db.newsleak.username="newsreaderspiegel"
-db.newsleak.password="newsreaderSOSOangry1998"
+db.newsleak.url="jdbc:postgresql://localhost:5432/newsleakspiegel"
+db.newsleak.username="newsreader"
+db.newsleak.password="newsreader"
 es.newsleak.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subject,Timezone,sender.id,Recipients.id,Recipients.order]
 
 # collection 2
