update to current hoover version

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -31,11 +31,12 @@ metadatafile = metadata.csv
 # Hoover datareader options
 hooverindex = testcollection
 hooverclustername = elasticsearch
-hooverurl = search-es
-hooverport = 9300
+hooverurl = http://search-es
+hooversearchurl = http://localhost:45024
+hooverport = 9200
 hoovertmpmetadata = hoover_metadata.csv
 
 # Other options
-nerserviceurl = newsleak-ner:5001
+nerserviceurl = http://newsleak-ner:5001
 threads = 4
 debugMaxDocuments = 0
