--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -136,6 +136,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.searchbox</groupId>
+			<artifactId>jest</artifactId>
+			<version>6.3.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
