--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -52,12 +52,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.uima</groupId>
 			<artifactId>uimaj-core</artifactId>
 			<version>${uimaDependencyVersion}</version>
@@ -86,6 +80,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
 			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
@@ -118,15 +117,14 @@
 			<version>4.5.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.6</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.heideltime</groupId>
 			<artifactId>heideltime</artifactId>
 			<version>2.2.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.tudarmstadt-lt</groupId>
-			<artifactId>GermaNER</artifactId>
-			<version>germanner-0.1.0</version>
 		</dependency>
 
 		<dependency>
@@ -140,7 +138,12 @@
 			<artifactId>jest</artifactId>
 			<version>6.3.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.searchbox</groupId>
+			<artifactId>jest-common</artifactId>
+			<version>6.3.1</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
