main method for collection creation renamed

--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -20,7 +20,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>uhh_lt.newsleak.preprocessing.Preprocessor</mainClass>
+							<mainClass>uhh_lt.newsleak.preprocessing.CreateCollection</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
