--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -131,6 +131,12 @@
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>2.4.6</version>
+			<exclusions>
+                <exclusion>
+                    <artifactId>lucene-analyzers-common</artifactId>
+                    <groupId>org.apache.lucene</groupId>
+                </exclusion>
+            </exclusions>
 		</dependency>
 
 		<dependency>
