regex pattern extraction configurable

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -2,26 +2,24 @@
 ##     NEWSLEAK CONFIG        ##
 ################################
 
+# processing configuration
 processlanguages = eng, deu
 defaultlanguage = eng
 paragraphsasdocuments = false
 maxdocumentlength = 1500000
+debugMaxDocuments = 0
+threads = 4
+
+# ner, dictionaries and pattern extraction
+nerserviceurl = http://newsleak-ner:5001
 dictionaryfiles = fck.all, deu:fck.deu, eng:fck.eng
+patternemail = true
+patternurl = false
+patternphone = false
+patternip = false
+
+# datareader (csv, hoover, or else)
 datareader = hoover
-
-# Newsleak postgres
-dburl = newsleak-postgres:5432
-dbname = newsleak
-dbuser = newsreader
-dbpass = newsreader
-dbschema = desc/postgresSchema.sql
-dbindices = desc/postgresIndices.sql
-
-# Newsleak elasticsearch index
-esindex = newsleak
-esurl = newsleak-elasticsearch
-esclustername = elasticsearch
-esport = 9300
 
 # CSV datareader options
 datadirectory = ./data
@@ -36,7 +34,16 @@ hooversearchurl = http://localhost:45024
 hooverport = 9200
 hoovertmpmetadata = hoover_metadata.csv
 
-# Other options
-nerserviceurl = http://newsleak-ner:5001
-threads = 4
-debugMaxDocuments = 0
+# Newsleak postgres
+dburl = newsleak-postgres:5432
+dbname = newsleak
+dbuser = newsreader
+dbpass = newsreader
+dbschema = desc/postgresSchema.sql
+dbindices = desc/postgresIndices.sql
+
+# Newsleak elasticsearch index
+esindex = newsleak
+esurl = newsleak-elasticsearch
+esclustername = elasticsearch
+esport = 9300
