--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -6,6 +6,7 @@
 	<artifactId>preprocessing</artifactId>
 	<version>0.9</version>
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
