min paragraph length configurable

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -6,7 +6,8 @@
 processlanguages = eng, deu
 defaultlanguage = eng
 paragraphsasdocuments = false
-maxdocumentlength = 1500000
+paragraphminimumlength = 1500
+maxdocumentlength = 500000
 debugMaxDocuments = 0
 threads = 4
 
