default preproc config updated

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -23,9 +23,9 @@ patternip = false
 datareader = hoover
 
 # CSV datareader options
-datadirectory = ./data
-documentfile = document.csv
-metadatafile = metadata.csv
+datadirectory = /etc/settings/data
+documentfile = document_example.csv
+metadatafile = metadata_example.csv
 
 # Hoover datareader options
 hooverindex = testcollection
